--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                 <div class="row">
                     <div class="navbar">
                         <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">ABR.coding</a>
+                        <a class="navbar-brand" href="/index.html">ABR.coding</a>
                         </div>
 
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li>
-                                           <a href="About.html">About</a>
+                                           <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="Blog.html">Blog</a>
+                                    <a href="/Blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="Contact.html">Conact</a>
+                                    <a href="/Contact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="Partners.html">Partners</a>
+                                    <a href="/Partners.html">Partners</a>
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav social">
@@ -73,19 +73,19 @@
              <nav class="nav-footer">
                 <ul>
                     <li>
-                                           <a href="About.html">About</a>
+                                           <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="Blog.html">Blog</a>
+                                    <a href="/Blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="Contact.html">Conact</a>
+                                    <a href="/Contact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="Partners.html">Partners</a>
+                                    <a href="/Partners.html">Partners</a>
                                 </li>
                 </ul>
                     
