--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                                 </li>
 
                                 <li>
-                                    <a href="/Blog.html">Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/Contact.html">Conact</a>
+                                    <a href="/bontact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/Partners.html">Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav social">
@@ -72,20 +72,20 @@
         <div class="container">
              <nav class="nav-footer">
                 <ul>
-                    <li>
+                   <li>
                                            <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="/Blog.html">Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/Contact.html">Conact</a>
+                                    <a href="/bontact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/Partners.html">Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                 </ul>
                     
