--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="navbar">
                         <div class="navbar-header">
-                                 <a class="navbar-brand" href="/index.html">ABR.coding</a>
+                                 <a class="navbar-brand" href="https://yuraabramovych.github.io/">ABR.coding</a>
                         </div>
 
                         <div class="collapse navbar-collapse">
