--- a/contact.html
+++ b/contact.html
@@ -16,25 +16,25 @@
                 <div class="row">
                     <div class="navbar">
                         <div class="navbar-header">
-                        <a class="navbar-brand" href="file:///E:/Lab/index.html">ABR.coding</a>
+                        <a class="navbar-brand" href="https://yuraabramovych.github.io/">ABR.coding</a>
                         </div>
 
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li>
-                                           <a href="file:///E:/Lab/About.html">About</a>
+                                           <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/blog.html">Blog</a>
+                                    <a href="/blog.html">/Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/contact.html">Conact</a>
+                                    <a href="/bontact.html">/Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/partners.html">Partners</a>
+                                    <a href="/partners.html">/Partners</a>
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav social">
@@ -61,20 +61,20 @@
         <div class="container">
              <nav class="nav-footer">
                 <ul>
-                    <li>
-                                           <a href="file:///E:/Lab/About.html">About</a>
+                    < <li>
+                                           <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/blog.html">Blog</a>
+                                    <a href="/blog.html">/Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/contact.html">Conact</a>
+                                    <a href="/bontact.html">/Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="file:///E:/Lab/partners.html">Partners</a>
+                                    <a href="/partners.html">/Partners</a>
                                 </li>
                 </ul>
                     
