--- a/blog.html
+++ b/blog.html
@@ -26,15 +26,15 @@
                                 </li>
 
                                 <li>
-                                    <a href="/blog.html">/Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/bontact.html">/Conact</a>
+                                    <a href="/bontact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/partners.html">/Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav social">
@@ -57,20 +57,20 @@
         <div class="container">
              <nav class="nav-footer">
                 <ul>
-                        <li>
+                            <li>
                                            <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="/blog.html">/Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/bontact.html">/Conact</a>
+                                    <a href="/bontact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/partners.html">/Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                 </ul>
                     
