--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li>
-                                    <a href="/About.html">About</a>
+                                    <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
@@ -65,8 +65,8 @@
         <div class="container">
              <nav class="nav-footer">
                 <ul>
-                   <li>
-                                    <a href="/About.html">About</a>
+                       <li>
+                                    <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
