--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,20 @@
 
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
-                                <li>
-                                           <a href="/about.html">About</a>
+                                   <li>
+                                    <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="/blog.html">/Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/bontact.html">/Conact</a>
+                                    <a href="/contact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/partners.html">/Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav social">
@@ -61,20 +61,20 @@
         <div class="container">
              <nav class="nav-footer">
                 <ul>
-                    < <li>
-                                           <a href="/about.html">About</a>
+                       <li>
+                                    <a href="/about.html">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="/blog.html">/Blog</a>
+                                    <a href="/blog.html">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="/bontact.html">/Conact</a>
+                                    <a href="/contact.html">Conact</a>
                                 </li>
 
                                 <li>
-                                    <a href="/partners.html">/Partners</a>
+                                    <a href="/partners.html">Partners</a>
                                 </li>
                 </ul>
                     
