--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li>
-                                    <a href="/about.html">About</a>
+                                    <a href="/About.html">About</a>
                                 </li>
 
                                 <li>
@@ -66,7 +66,7 @@
              <nav class="nav-footer">
                 <ul>
                        <li>
-                                    <a href="/about.html">About</a>
+                                    <a href="/About.html">About</a>
                                 </li>
 
                                 <li>
